--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Hola Mundo Unicomfacauca</h1>
-    <span id="jhon"></span>
+    <span id="jhon">
+        <h1>{{titulo}}</h1>
+        <p>{{app}}</p>
+        <h3>{{vari}}</h3>
+    </span>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="app.js"></script>
 </body>
